--- a/lucene/distribution/build.gradle
+++ b/lucene/distribution/build.gradle
@@ -34,8 +34,35 @@ ext {
   }.call()
 }
 
-// Prepare the "source" distribution artifact.
-apply from: buildscript.sourceFile.toPath().resolveSibling("source-release.gradle")
+// Collect git revision.
+MapProperty<String, String> gitStatus = rootProject.extensions.getByName("gitinfo").getGitInfo()
+Provider<String> gitRev = gitStatus.getting("git.commit")
+
+// Prepare the "source" distribution artifact. We use raw git export, no additional complexity needed.
+Provider<RegularFile> sourceTgzFile = project.layout.buildDirectory.file("packages/lucene-${version}-src.tgz")
+tasks.register("assembleSourceTgz", {
+  description "Assemble source Lucene artifact as a .tgz file."
+
+  inputs.property("git-revision", gitRev)
+
+  outputs.file sourceTgzFile
+
+  doFirst {
+    quietExec {
+      executable = project.externalTool("git")
+      workingDir = project.rootDir
+
+      args += [
+              "archive",
+              "--format", "tgz",
+              "--prefix", "lucene-${version}/",
+              "--output", sourceTgzFile.get().asFile,
+              "HEAD"
+      ]
+    }
+  }
+})
+
 
 // Prepare the "binary" distribution artifact.
 apply from: buildscript.sourceFile.toPath().resolveSibling("binary-release.gradle")
@@ -43,8 +70,15 @@ apply from: buildscript.sourceFile.toPath().resolveSibling("binary-release.gradl
 // Configure maven artifact collection to a local build folder (required to collect artifacts for the release).
 apply from: buildscript.sourceFile.toPath().resolveSibling("collect-maven-artifacts.gradle")
 
-// Configure artifact signing.
-apply from: buildscript.sourceFile.toPath().resolveSibling("artifact-signing.gradle")
+// Configure release artifact signing.
+tasks.register("signReleaseArchives", Sign, {
+  dependsOn tasks.assembleBinaryTgz
+  sign tasks.assembleBinaryTgz
+
+  // The source tgz is not an archive task so be explicit about the outputs to sign.
+  dependsOn tasks.assembleSourceTgz
+  sign sourceTgzFile.get().asFile
+})
 
 
 // Set up the HTML-rendered "changes" distribution artifact by linking to documentation's output.
@@ -72,18 +106,16 @@ task computeChecksums(type: buildinfra.checksumClass()) {
 }
 
 
-task prepareGitRev() {
-  dependsOn ":gitStatus"
+tasks.register("prepareGitRev", {
+  Provider<RegularFile> outputFile = project.layout.buildDirectory.file(".gitrev")
 
-  ext.outputFile = file("${buildDir}/.gitrev")
-
-  outputs.file(ext.outputFile)
-  inputs.property("gitrev", provider { -> rootProject.ext.gitRev })
+  inputs.property("gitrev", gitRev)
+  outputs.file(outputFile)
 
   doFirst {
-    Files.writeString(ext.outputFile.toPath(), rootProject.ext.gitRev, StandardCharsets.UTF_8)
+    Files.writeString(outputFile.get().asFile.toPath(), gitRev.get(), StandardCharsets.UTF_8)
   }
-}
+})
 
 
 // Assemble everything needed in the release folder structure.
