Ported rat sources.

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ plugins {
   id "lucene.validation.error-prone"
   id "lucene.validation.jar-checks"
   id "lucene.validation.source-patterns"
+  id "lucene.validation.rat-sources"
 
   id "lucene.ide.intellij-idea"
   id "lucene.ide.eclipse"
@@ -118,7 +119,6 @@ configure(rootProject) {
 }
 
 // Validation tasks
-apply from: file('gradle/validation/rat-sources.gradle')
 apply from: file('gradle/validation/owasp-dependency-check.gradle')
 apply from: file('gradle/validation/ecj-lint.gradle')
 
