--- a/build-tools/build-infra/src/main/groovy/lucene.validation.owasp.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.owasp.gradle
@@ -18,29 +18,47 @@
 
 // This adds OWASP vulnerability validation of project dependencies
 
+if (project != project.rootProject) {
+  throw new GradleException("Applicable to rootProject only: " + project.path)
+}
+
 // If -Pvalidation.owasp=true is set the validation will also run as part of the check task.
+Provider<Boolean> owaspOption = buildOptions.addBooleanOption("validation.owasp",
+    "Enable OWASP vulnerability check for dependencies.", false)
 
-def resources = scriptResources(buildscript)
+Provider<Integer> owaspThresholdOption = buildOptions.addIntOption("validation.owasp.threshold",
+    "Owasp validation threshold to fail the build, if exceeded.", 7)
 
-configure(rootProject) {
+Provider<String> owaspApiKey = buildOptions.addOption("validation.owasp.apikey",
+        "Owasp validation API key (https://nvd.nist.gov/developers/request-an-api-key).")
+
+if (owaspOption.get() || gradle.startParameter.taskNames.contains("owasp")) {
+  plugins.apply(deps.plugins.owasp.dependencycheck.get().pluginId)
+
   dependencyCheck {
-    failBuildOnCVSS = propertyOrDefault("validation.owasp.threshold", 7) as Integer
+    failBuildOnCVSS = owaspThresholdOption.get()
     formats = ['HTML', 'JSON']
     skipProjects = []
     skipConfigurations = ['unifiedClasspath']
-    suppressionFile = file("${resources}/exclusions.xml")
+    suppressionFile = rootProject.layout.projectDirectory.file("gradle/validation/owasp/exclusions.xml")
+
+    if (owaspApiKey.isPresent()) {
+      nvd.apiKey = owaspApiKey.get()
+    }
   }
 
-  task owasp() {
+  def owaspTask = tasks.register("owasp", {
     group "Verification"
     description "Check project dependencies against OWASP vulnerability database."
-    dependsOn dependencyCheckAggregate
-  }
+    dependsOn "dependencyCheckAggregate"
+  })
 
   // Unless explicitly enabled, do not attach owasp to check. It has a large download
   // footprint and takes a significant amount of time. This should be enabled for
   // nightly CI runs only, I think.
-  if (propertyOrDefault("validation.owasp", false).toBoolean()) {
-    check.dependsOn owasp
+  if (owaspOption.get()) {
+    tasks.named("check").configure {
+      dependsOn owaspTask
+    }
   }
 }
