--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ plugins {
   id "lucene.validation.jar-checks"
   id "lucene.validation.source-patterns"
   id "lucene.validation.rat-sources"
+  id "lucene.validation.owasp"
 
   id "lucene.ide.intellij-idea"
   id "lucene.ide.eclipse"
@@ -68,7 +69,6 @@ plugins {
   alias(deps.plugins.benmanes.versions)
   alias(deps.plugins.forbiddenapis) apply false
   alias(deps.plugins.randomizedtesting) apply false
-  alias(deps.plugins.owasp.dependencycheck)
   alias(deps.plugins.undercouch.download) apply false
   alias(deps.plugins.errorprone) apply false
   alias(deps.plugins.jacocolog) apply false
@@ -119,7 +119,6 @@ configure(rootProject) {
 }
 
 // Validation tasks
-apply from: file('gradle/validation/owasp-dependency-check.gradle')
 apply from: file('gradle/validation/ecj-lint.gradle')
 
 // Source or data regeneration tasks
