--- a/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-groovy.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-groovy.gradle
@@ -43,6 +43,7 @@ tasks.named("spotlessGradleScripts").configure {
   mustRunAfter ":lucene:build-tools:missing-doclet:spotlessJava"
   mustRunAfter ":lucene:build-tools:missing-doclet:renderJavadoc"
   mustRunAfter ":lucene:build-tools:build-infra-shadow:pluginUnderTestMetadata"
+  mustRunAfter ":lucene:build-tools:build-infra-shadow:pluginDescriptors"
 }
 
 tasks.named("tidy").configure {
