--- a/settings.gradle
+++ b/settings.gradle
@@ -26,8 +26,8 @@ pluginManagement {
 
 plugins {
     id "org.gradle.toolchains.foojay-resolver-convention" version "1.0.0"
-    id 'com.gradle.develocity' version '3.19.2'
-    id 'com.gradle.common-custom-user-data-gradle-plugin' version '2.2.1'
+    id 'com.gradle.develocity' version '3.19.2' apply false
+    id 'com.gradle.common-custom-user-data-gradle-plugin' version '2.2.1' apply false
 }
 
 dependencyResolutionManagement {
@@ -38,8 +38,12 @@ dependencyResolutionManagement {
     }
 }
 
-if (Boolean.parseBoolean(providers.gradleProperty("gradle.ge").orElse("true").get())) {
-    apply from: file('gradle/ge.gradle')
+boolean isCIBuild = System.getenv().keySet().find { it ==~ /(?i)((JENKINS|HUDSON)(_\w+)?|CI)/ } != null
+boolean enableDevelocity = Boolean.parseBoolean(providers.gradleProperty("gradle.ge").orElse("false").get()) || isCIBuild
+if (enableDevelocity) {
+    apply plugin: "com.gradle.develocity"
+    apply plugin: "com.gradle.common-custom-user-data-gradle-plugin"
+    apply from: file('gradle/develocity.gradle')
 }
 
 rootProject.name = "lucene-root"
