--- a/gradle/_to-remove/globals.gradle
+++ b/gradle/_to-remove/globals.gradle
@@ -14,6 +14,8 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+import java.time.ZonedDateTime
+import java.time.format.DateTimeFormatter
 
 allprojects {
   ext {
@@ -101,5 +103,31 @@ allprojects {
       }
       return taskList
     }
+  }
+}
+
+ext {
+  // Minimum Java version required to compile and run Lucene.
+  minJavaVersion = JavaVersion.toVersion(deps.versions.minJava.get())
+
+  // Build timestamp.
+  def tstamp = ZonedDateTime.now()
+  buildDate = DateTimeFormatter.ofPattern("yyyy-MM-dd").format(tstamp)
+  buildTime = DateTimeFormatter.ofPattern("HH:mm:ss").format(tstamp)
+  buildYear = DateTimeFormatter.ofPattern("yyyy").format(tstamp)
+}
+
+configurations {
+  groovy
+}
+
+dependencies {
+  // Use a newer groovy that doesn't have illegal reflective accesses.
+  groovy deps.groovy
+}
+
+ext {
+  scriptResources = { buildscript ->
+    return file(buildscript.sourceFile.absolutePath.replaceAll('.gradle$', ""))
   }
 }
